index.html: script type module, added get and post routes to server for saving settings, changed dark theme from using local storage to saving to and loading from file, created settings.json

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <script src="js/cardApp.mjs" defer></script>
+    <script type="module" src="js/cardApp.mjs" defer></script>
 
 </body>
 </html>
