Added manifest and service worker configurations

--- a/public/skillTree.html
+++ b/public/skillTree.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skill Tree Test</title>
+    <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body>
     <h1>Borderlands 2-esque skill tree</h1>
