Corrected file path to skillTree.mjs

--- a/public/skillTree.html
+++ b/public/skillTree.html
@@ -10,6 +10,6 @@
     <h1>Borderlands 2-esque skill tree</h1>
     <ul id="skillTreeElement"></ul>
     </ul>
-    <script type="module" src="../js/skillTree.mjs" defer></script>
+    <script type="module" src="js/skillTree.mjs" defer></script>
 </body>
 </html>
