Instructions to go to /skill-tree added

--- a/public/skillTree.html
+++ b/public/skillTree.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Borderlands 2-esque skill tree</h1>
+    <h3>Go to /skill-tree for CRUD operations</h3>
     <ul id="skillTreeElement"></ul>
     </ul>
     <script type="module" src="js/skillTree.mjs" defer></script>
