Moved skillTree.mjs and skillTreeManager.mjs out of js folder. Renamed file paths to exclude /js in various places.

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,6 @@
     </form>
 
     <ul id="skillTreeElement"></ul>
-    <script type="module" src="js/skillTree.mjs" defer></script>
+    <script type="module" src="skillTree.mjs" defer></script>
 </body>
 </html>
