--- a/public/deckOfCards.html
+++ b/public/deckOfCards.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <script type="module" src="js/cardApp.mjs" defer></script>
+    <script type="module" src="cardApp.mjs" defer></script>
 
 </body>
 </html>
