Modified list creation to make a span so that the CSS could wrap a box around each skill's name

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <form id="inputForm">
             <input type="text" id="inputSkillName" name="query" placeholder="Enter skill name..." required />
             <div class="skillTreeBtnWrapper">
-                <button type="button" id="btnUnlockSkill">Unlock this skill</button>
+                <button type="button" id="btnUnlockSkill">Unlock/lock this skill</button>
                 <button type="button" id="btnDeleteSkill">Delete this skill</button>
             </div>
         </form>
